package model.ai;

public class MinimaxAI {
}
