@startuml ClassDiagram_Model

' ============================================================
'  JEU DE DAMES — DIAGRAMME 1/2 : COUCHE MODEL
'  (Logique métier : pions, plateau, règles, joueurs, IA)
' ============================================================

skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 60
skinparam shadowing false
skinparam roundCorner 10
skinparam classAttributeIconSize 0
hide circle

skinparam class {
    FontSize 13
    FontStyle bold
    AttributeFontSize 11
    BorderThickness 1.5
    BackgroundColor<<model>>   #EBF5FB
    BorderColor<<model>>       #2E86C1
    BackgroundColor<<ai>>      #E8F8F5
    BorderColor<<ai>>          #117A65
    BackgroundColor<<enumc>>   #FEF9E7
    BorderColor<<enumc>>       #D4AC0D
}

title <size:17><b>Jeu de Dames — Diagramme de Classes (1/2)</b></size>\n<size:11>Couche MODEL : logique métier</size>\n

' --- Énumérations ---
enum PieceColor <<enumc>> {
    WHITE
    BLACK
    --
    + opposee() : PieceColor
}
enum GameState <<enumc>> {
    EN_COURS
    VICTOIRE_BLANC
    VICTOIRE_NOIR
    NUL
}

' --- Hiérarchie des pièces ---
abstract class Piece <<model>> {
    - couleur : PieceColor
    - position : Position
    --
    + getCouleur() : PieceColor
    + getPosition() : Position
    + setPosition(position) : void
    + {abstract} getCoupsPossibles(plateau) : List<Move>
    + {abstract} peutEtrePromu() : boolean
    + {abstract} getCapturesImmediates(plateau, depart) : List<int[]>
}

class Pawn <<model>> {
    + getCoupsPossibles(plateau) : List<Move>
    + peutEtrePromu() : boolean
    + getCapturesImmediates(plateau, depart) : List<int[]>
}

class King <<model>> {
    + getCoupsPossibles(plateau) : List<Move>
    + peutEtrePromu() : boolean
    + getCapturesImmediates(plateau, depart) : List<int[]>
}

' --- Objets valeur ---
class Position <<model>> {
    - ligne : int
    - colonne : int
    --
    + getLigne() : int
    + getColonne() : int
    + {static} estValide(ligne, colonne) : boolean
}

class Move <<model>> {
    - depart : Position
    - arrivee : Position
    - positionsCapturees : List<Position>
    - estPromotion : boolean
    --
    + getDepart() : Position
    + getArrivee() : Position
    + getPositionsCapturees() : List<Position>
    + ajouterCapturee(pos) : void
    + estCapture() : boolean
    + estPromotion() : boolean
}

' --- Plateau ---
class Board <<model>> {
    - {static} TAILLE : int = 8
    - grille : Piece[][]
    --
    + initialiser() : void
    + getPiece(position) : Piece
    + appliquerCoup(coup) : void
    + appliquerCoup(coup, memoriser) : MoveUndo
    + annulerCoup(undo) : void
    + getToutesLesPieces() : List<Piece>
    + copier() : Board
}

' --- Règles ---
class GameRules <<model>> {
    + {static} getCoupsLegaux(plateau, couleur) : List<Move>
    + {static} estCoupValide(plateau, coup, couleur) : boolean
    + {static} getCoupsValidesPour(piece, plateau) : List<Move>
    + {static} getCapturesObligatoires(plateau, couleur) : List<Move>
    + {static} aGagne(plateau, couleur) : boolean
    - {static} chercherCaptures(plateau, piece, origine, depart, ...) : void
}

' --- Orchestrateur ---
class Game <<model>> {
    - {static} SEUIL_NULLE : int = 40
    - plateau : Board
    - joueurs : Player[2]
    - indexCourant : int
    - etat : GameState
    - coupsSansProgres : int
    --
    + getJoueurCourant() : Player
    + getJoueur(i) : Player
    + getPlateau() : Board
    + estTerminee() : boolean
    + getGagnant() : Player
    + jouerCoup(coup) : boolean
}

' --- Joueurs ---
abstract class Player <<model>> {
    # nom : String
    # couleur : PieceColor
    --
    + getNom() : String
    + getCouleur() : PieceColor
    + {abstract} estHumain() : boolean
}
class HumanPlayer <<model>> {
    + estHumain() : boolean
}
class AIPlayer <<model>> {
    - ia : MinimaxAI
    --
    + estHumain() : boolean
    + choisirCoup(partie) : Move
}

' --- IA ---
class MinimaxAI <<ai>> {
    - {static} PROFONDEUR : int = 4
    --
    + trouverMeilleurCoup(partie) : Move
    - minimax(plateau, profondeur, alpha, beta, maximise, couleurIA) : int
    - {static} evaluer(plateau, couleur) : int
}

' --- Relations : héritage ---
Piece  <|-- Pawn
Piece  <|-- King
Player <|-- HumanPlayer
Player <|-- AIPlayer

' --- Relations : composition ---
Game     *-- "1"     Board     : contient
Game     *-- "2"     Player    : oppose
Board    *-- "0..24" Piece     : contient
AIPlayer *-- "1"     MinimaxAI : possède

note bottom of Piece
  <b>Classe abstraite</b> — polymorphisme :
  Pawn et King redéfinissent
  getCoupsPossibles() et getCapturesImmediates()
  selon leurs règles propres.
end note

note right of GameRules
  <b>Toutes méthodes statiques.</b>
  Prise obligatoire + maximale.
  chercherCaptures() est récursive :
  joue/annule les coups sur le plateau
  pour enchaîner plusieurs captures.
end note

note right of MinimaxAI
  Algorithme <b>Minimax + élagage alpha-bêta</b>,
  profondeur 4. evaluer() note la position
  (matériel + avancement + centre).
end note

legend bottom
  <back:#EBF5FB>   </back> Model métier   <back:#E8F8F5>   </back> Intelligence Artificielle   <back:#FEF9E7>   </back> Énumération
  ──▷ Héritage      ◆── Composition
endlegend

@enduml
